# dictcc-cli

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  search_dict_cc.py
src/dictcc-cli/: search_dict_cc.py
src/dictcc_mini/: cli.py  config.py  languages.py  misc.py  scraper.py  table.py
test/: gather_test_data.py  test_table.py
test/data/: bremsstrahlung.html  bremsstrahlung.json  hi.html  hi.json  kanzler.html  kanzler.json  test.html  test.json  was.html  was.json
