[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[project]
name = "dictcc-mini"
version = "0.2.0"
authors = [
  { name="thstkn", email="dev@veddeler.org" },
]
description = "A simple and lightweight terminal formatter for dict.cc translations."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/thstkn/dictcc-mini"

[project.scripts]
dict = "dictcc_mini.cli:main"
